# autonomous-data-engineering

./: .gitignore  Dockerfile  LICENSE  README.md  cloudbuild.yaml  main.py  pyproject.toml
config/: pipeline_config.yaml  quality_rules.yaml  sources.yaml
src/agents/: base_agent.py
src/agents/aggregation/: agent.py  dataset_builder.py  optimization.py  query_analyzer.py
src/agents/ingestion/: agent.py  landing_manager.py  schema_detector.py  source_handlers.py
src/agents/transformation/: agent.py  biglake_manager.py  code_generator.py  quality_engine.py
src/common/: config.py  event_bus.py  lineage_tracker.py  logging_config.py  models.py  schema_registry.py  state_manager.py
src/llm/: gemini_client.py
templates/: beam_batch.py.j2  beam_streaming.py.j2  sql_aggregate.sql.j2  sql_transform.sql.j2
tests/: conftest.py  test_aggregation_agent.py  test_ingestion_agent.py  test_transformation_agent.py
